# MercatorStairClimberTrackerDashboard

./: .dockerignore  .gitignore  Dockerfile  app.py  config.py  database.db  fly.toml  forms.py  models.py  pyproject.toml
static/: styles.css
templates/: dashboard.html  register.html
