[tool.poetry]
name = "mercatorclimbers"
version = "0.1.0"
description = ""
authors = ["Luko van der Maas <luko.vandermaas@ru.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
flask-wtf = "^1.2.1"
wtforms = "^3.1.2"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
